# epw-rs

./: Cargo.toml  LICENSE.txt  Makefile  README.md
examples/: example.rs  polars.rs
src/: epw_file.rs  error.rs  header.rs  lib.rs  weather_data.rs
