[package]
name = "epw-rs"
version = "0.1.4"
edition = "2021"

categories = [
    "encoding",
    "parser-implementations"
]
description = "Rust parser for Energy Plus Weather file format"
repository = "https://github.com/hamiltonkibbe/epw-rs"
include = [
    "Cargo.toml",
    "LICENSE.txt",
    "README.md",
    "src/**/*.rs",
    "examples/*.rs"
]

license = "MIT"
readme = "README.md"
rust-version = "1.80.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
polars = { version = "0.45.1", features = ["dtype-u8"], optional = true }

[lib]
name = "epw_rs"
path = "src/lib.rs"


[features]
polars = ["dep:polars"]

[[example]]
name = "polars"
required-features = ["polars"]